data/src/main/java/com/example/data/network/error/NotFoundException.kt
package com.example.data.network.error

class NotFoundException: RuntimeException()